[tool.poetry]
name = "spectre"
version = "0.1.0"
description = ""
authors = ["Cyn <70904206+CooldudePUGS@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.1"
wheel = "^0.40.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
